# ai-chatbox

./: Cargo.toml  README.md  README.org  esp_sr_bind.h  flash_models.sh  partitions.csv  sdkconfig.defaults  setup_env.sh  upload-model.sh  upload-voice-data.sh  vosk_server.py
.cargo/: config.toml
src/: audio_device.rs  audio_processing.rs  http_client.rs  llm_intf.rs  main.rs  sd_card.rs  speech_recognition.rs  transcription.rs  tts.rs  wifi.rs
